@@ -4,8 +4,11 @@ plugins {
   id 'com.github.spacialcircumstances.gradle-cucumber-reporting' version '0.1.23'
 }
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+java {
+  toolchain {
+    languageVersion = JavaLanguageVersion.of(17)
+  }
+}
 
 repositories {
   mavenLocal()
@@ -16,9 +19,9 @@ repositories {
 }
 
 dependencies {
-  testCompile group: 'com.github.hmcts', name: 'ccd-test-definitions', version: '7.0.0'
-  testCompile group: 'com.github.hmcts', name: 'befta-fw', version: '8.7.1'
-  testCompile 'com.github.hmcts:fortify-client:1.3.0:all'
+  testImplementation group: 'com.github.hmcts', name: 'ccd-test-definitions', version: '7.22.2'
+  testImplementation group: 'com.github.hmcts', name: 'befta-fw', version: '9.0.2'
+  testImplementation group: 'com.github.hmcts', name: 'fortify-client', version: '1.4.2'
 }
 
 sourceSets {
@@ -35,12 +38,12 @@ sourceSets {
 }
 
 configurations {
-  aatCompile.extendsFrom(testCompile)
+  aatImplementation.extendsFrom(testImplementation)
   cucumberRuntime.extendsFrom(functionalRuntime)
 }
 
 task highLevelDataSetup(type: JavaExec) {
-  main = "uk.gov.hmcts.ccd.printservice.befta.HighLevelDataSetupApp"
+  mainClass = "uk.gov.hmcts.ccd.printservice.befta.HighLevelDataSetupApp"
   classpath += configurations.cucumberRuntime + sourceSets.aat.runtimeClasspath
   jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
 }
@@ -80,6 +83,7 @@ task functional(type: Test) {
     javaexec {
       main = "uk.gov.hmcts.ccd.printservice.befta.CasePrintServiceBeftaMain"
       classpath += configurations.cucumberRuntime + sourceSets.aat.runtimeClasspath + sourceSets.main.output + sourceSets.test.output
+      jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
       args = ['--plugin', "json:${rootDir}/target/cucumber.json", '--tags', 'not @Ignore', '--glue',
               'uk.gov.hmcts.befta.player', 'src/resources/features']
     }
@@ -88,8 +92,10 @@ task functional(type: Test) {
   finalizedBy {
     generateCucumberReports {
       doLast{
+        delete "${rootDir}/BEFTA Report for Functional Tests/"
         new File("${rootDir}/BEFTA Report for Functional Tests").mkdirs()
         file("${rootDir}/target/cucumber/cucumber-html-reports").renameTo(file("${rootDir}/BEFTA Report for Functional Tests"))
+        logger.quiet("Functional test report moved to ---> file://${rootDir}/BEFTA%20Report%20for%20Functional%20Tests/overview-features.html")
       }
     }
   }
@@ -98,7 +104,7 @@ task functional(type: Test) {
 }
 
 task fortifyScan(type: JavaExec)  {
-  main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+  mainClass = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
   classpath += sourceSets.test.runtimeClasspath
   jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
   // The line below prevents the build from failing if the Fortify scan detects issues
